# proyecto-conteo-celulas

./: .gitignore  EXAMPLES.md  INSTALL.md  README.md  pyproject.toml
cell_counter/: __init__.py  step00_io.py  step01_field.py  step02_grayscale.py  step03_intensity.py  step04_spatial_filter.py  step05_frequency_filter.py  step06_edges.py  step07_thresholding.py  step08_segmentation.py  step09_counting.py  step10_pipeline.py
demos/: demo_count_cells.py
examples/: README.md
